@@ -1,5 +1,5 @@
 /*
- * Copyright 2003,2006 Red Hat, Inc.
+ * Copyright 2003,2006,2007 Red Hat, Inc.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -61,11 +61,16 @@ int v5_get_creds_etype(krb5_context ctx,
 		       krb5_creds *current_creds, int wanted_etype,
 		       krb5_creds **target_creds);
 
-int v5_save(krb5_context ctx,
-	    struct _pam_krb5_stash *stash,
-	    struct _pam_krb5_user_info *userinfo,
-	    struct _pam_krb5_options *options,
-	    const char **ccname);
+int v5_save_for_user(krb5_context ctx,
+		     struct _pam_krb5_stash *stash,
+		     struct _pam_krb5_user_info *userinfo,
+		     struct _pam_krb5_options *options,
+		     const char **ccname);
+int v5_save_for_tokens(krb5_context ctx,
+		       struct _pam_krb5_stash *stash,
+		       struct _pam_krb5_user_info *userinfo,
+		       struct _pam_krb5_options *options,
+		       const char **ccname);
 
 void v5_destroy(krb5_context ctx, struct _pam_krb5_stash *stash,
 	        struct _pam_krb5_options *options);
