@@ -1,3 +1,8 @@
+2007-07-20:
+	* src/v4.c,src/v5.c,src/auth.c,src/session.c: distinguish between
+	ccache and ticket files which we create for users and those which
+	we create for our own use (which needn't involve the helper).
+
 2007-07-19:
 	* src/acct.c: return ignore instead of user-unknown for client-revoked
 	errors when ignore_unknown_users has been specified, for consistency
